<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background">

    <TextView
        android:layout_width="300pt"
        android:layout_height="70pt"
        android:layout_marginTop="-60pt"
        android:layout_gravity="center"
        android:gravity="center"

        android:text="@string/openingPage_logo"
        android:textColor="@color/logoText1"
        android:textSize="@dimen/logo"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20pt"
        android:layout_gravity="center"
        android:gravity="center">

        <!--Login Button-->
        <Button
            android:id="@+id/login"
            android:layout_width="100pt"
            android:layout_height="25pt"
            android:paddingBottom="5pt"

            android:text="@string/openingPage_login"
            />

        <!--Sign Up Button-->
        <Button
            android:id="@+id/signUp"
            android:layout_width="100pt"
            android:layout_height="25pt"

            android:text="@string/openingPage_signUp"
            />

    </LinearLayout>

</FrameLayout>